--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "@felipeflohr/flohr-common-injection",
   "version": "1.0.0",
   "description": "DI and IoC used in my personal projects.",
-  "main": "/lib/index.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@FelipeFlohr",
+    "access": "public"
+  },
   "scripts": {
     "test": "jest",
-    "compile": "tsc",
-    "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts ."
+    "compile": "gulp",
+    "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts .",
+    "doc:generator": "typedoc --out docs lib/index.ts",
+    "publish:local": "npm run compile && cd dist && npm publish",
+    "prepublish:github": "npm run compile",
+    "publish:github": "npm publish"
   },
   "repository": {
     "type": "git",
@@ -38,8 +45,8 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^2.12.2",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
     "typedoc": "^0.23.26",
@@ -53,14 +60,14 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "testPathIgnorePatterns": [
-        "/node_modules/",
-        "/dist/"
+      "/node_modules/",
+      "/dist/"
     ],
     "transform": {
-        "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
     },
     "transformIgnorePatterns": [
-        "node_modules/(?!variables/.*)"
+      "node_modules/(?!variables/.*)"
     ]
-}
+  }
 }
