--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -34,6 +34,9 @@ jobs:
                   registry-url: https://npm.pkg.github.com/
             - name: Node CI
               run: npm ci
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
             - name: Prepublish compile
               run: npm run prepublish:github
             - name: Publish
