--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -32,6 +32,11 @@ jobs:
               with:
                   node-version: 16
                   registry-url: https://npm.pkg.github.com/
+            - name: Download packages
+              run: npm install
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
             - name: Node CI
               run: npm ci
               env:
