--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -32,11 +32,10 @@ jobs:
               with:
                   node-version: 16
                   registry-url: https://npm.pkg.github.com/
-            - name: Download packages
-              run: npm install
-              env:
-                  TOKEN: ${{secrets.TOKEN}}
-                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
+            - name: Print ENV
+              run: echo "$TOKEN"
+            - name: Print ENV two
+              run: echo "$secrets.TOKEN"
             - name: Node CI
               run: npm ci
               env:
