--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -17,8 +17,18 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 16
+            - name: Print ENV
+              run: echo "$TOKEN"
+            - name: Print ENV two
+              run: echo "$secrets.TOKEN"
             - run: npm ci
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
             - run: npm test
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
 
     publish-gpr:
         needs: build
@@ -32,10 +42,6 @@ jobs:
               with:
                   node-version: 16
                   registry-url: https://npm.pkg.github.com/
-            - name: Print ENV
-              run: echo "$TOKEN"
-            - name: Print ENV two
-              run: echo "$secrets.TOKEN"
             - name: Node CI
               run: npm ci
               env:
